--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CLASE HTML</title>
 </head>
 <body>
-    <h1>hola munndo</h1>
+    <h1>ETIQUETAS HTML</h1>
+    <UL>
+    <li>(P): Para parrafos</li>
+        <li>(h1): Para titulos</UL>
+        <li>(h2): Para subtitulos</li>
+    </UL>
 </body>
 </html>
