--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
 </head>
 <body>
     <h1>ETIQUETAS HTML</h1>
-    <UL>
+    <ul>
     <li>(P): Para parrafos</li>
-        <li>(h1): Para titulos</UL>
+        <li>(h1): Para titulos</li>
         <li>(h2): Para subtitulos</li>
-    </UL>
+    </ul>
+    <h2>COMANDOS BASICOS GITHUB</h2>
+    <ol>
+        <li>1.- git init</li>
+        <li>2.- git add</li>
+        <li>3.- git commit -m "mi nombre commi"</li>
+        <li>4.- git push</li>
+    </ol>
 </body>
 </html>
