--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLASE HTML</title>
 </head>
-<body>
+<body> 
     <h1>ETIQUETAS HTML</h1>
     <ul>
     <li>(P): Para parrafos</li>
@@ -14,10 +14,18 @@
     </ul>
     <h2>COMANDOS BASICOS GITHUB</h2>
     <ol>
-        <li>1.- git init</li>
+        <li> <img src="img/img1.webp" width="1025px" height="auto" title="deadpool"</li>
         <li>2.- git add</li>
         <li>3.- git commit -m "mi nombre commi"</li>
         <li>4.- git push</li>
     </ol>
+    <img src="img/img1.webp" width="1025px" height="auto" title="deadpool"
+<p>
+    Max Martin escribió 'Bang Bang' y se la pusieron a Ariana, me la pusieron a mí y a ambas nos encantó.
+</p>
+    <video src="video/SUPER MARIO BROS La Película Tráiler Español Latino (2023)_HD.mp4" autoplay></video>
+    <iframe width="1600" height="1000" src="https://www.youtube.com/embed/RuMn8svxedk?si=3wjlwOOiGh8KVU-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="1600" height="1000" src="https://www.youtube.com/embed/Q4Js9OEODHM?si=1hPhYKCYH-oqOG_1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 </body>
 </html>
