--- a/index.html
+++ b/index.html
@@ -23,9 +23,37 @@
 <p>
     Max Martin escribió 'Bang Bang' y se la pusieron a Ariana, me la pusieron a mí y a ambas nos encantó.
 </p>
-    <video src="video/SUPER MARIO BROS La Película Tráiler Español Latino (2023)_HD.mp4" autoplay></video>
+    <video src="https://youtu.be/Z_7mF5uWqIs?si=B1g86siMElyn_3Dy" autoplay></video>
     <iframe width="1600" height="1000" src="https://www.youtube.com/embed/RuMn8svxedk?si=3wjlwOOiGh8KVU-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <iframe width="1600" height="1000" src="https://www.youtube.com/embed/Q4Js9OEODHM?si=1hPhYKCYH-oqOG_1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+    <table border="3" bordercolor="red">
+    <tr bgcolor="red">
+        <th bgcolor="green">primer parcial</th>
+        <th bgcolor="green">primer parcial</th>
+        <th bgcolor="green">primer parcial</th>
+    </tr>
+    <tr>
+        <td>20</td>
+        <td>40</td>
+        <td>60</td>
+    </tr>
+    <tr>
+        <td>30</td>
+        <td>60</td>
+        <td>60</td>
+    </tr>
+    <tr>
+        <td>40</td>
+        <td>80</td>
+        <td>100</td>
+    </tr>
+    <tr>
+        <td>20</td>
+        <td>40</td>
+        <td>60</td>
+    </tr>
+    </table>
+    <a href="https://youtu.be/IMbW-slqPcw?si=nxLYBLRl6k3GPx-a" >ir al video</a>
 </body>
 </html>
