--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLASE HTML</title>
+    <title>😎CLASE HTML🔥</title>
 </head>
 <body> 
     <h1>ETIQUETAS HTML</h1>
@@ -54,6 +54,28 @@
         <td>60</td>
     </tr>
     </table>
-    <a href="https://youtu.be/IMbW-slqPcw?si=nxLYBLRl6k3GPx-a" >ir al video</a>
+    <a href="https://youtu.be/IMbW-slqPcw?si=nxLYBLRl6k3GPx-a" target="_new"> ir al video </a>  
+    <form>
+        <label>nombre</label>
+        <input types="text" placeholder="ingrese nombre aqui"></input>
+        <select>
+            <options value="cochabamba">Cochabamba</option>
+            <options value="La Paz">La Paz</option>
+            <options value="Santa Cruz">Santa Cruz</option>
+            <options value="Beni">Beni</option>
+            <options value="Tarija">Tarija</option>
+            <options value="Pando">Pando</option>
+            <options value="Potosi">Tarija</option>
+            <options value="Sucre">Sucre</option>
+        </select>
+        <label>habitantes</label>
+        <input type="number">
+        <label>contraseña</label>
+        <input type="password">
+        <label>detalle</label>
+        <textarea></textarea>
+        <input type="button" value="guardar"
+    </form>
+
 </body>
 </html>
